<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
    <PreferenceCategory android:title="@string/ConfigurationTitle"
    <EditTextPreference
        android:id="@+id/user_config"
        android:key=""
        android:title="@string/userTitle"
        android:summary="@string/userSummary"
        android:dialogTitle="@string/titleDialog"
        android:defaultValue=""/>
    <ListPreference
        android:id="@+id/board_config"
        android:key=""
        android:title=""
        android:summary=""
        android:dialogTitle=""
        android:entries=""
        android:entryValues="" />
    <CheckBoxPreference
        android:id="@+id/time_config"
        android:key=""
        android:title=""
        android:summary=""/>
    <ListPreference
        android:id="@+id/select_time"
        android:key=""
        android:title=""
        android:summary=""
        android:dialogTitle=""
        android:entries=""
        android:entryValues=""/>



    </PreferenceCategory>
</PreferenceScreen>